# cpp-proj-template

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  TEMPLATE.md  cpp-proj.lua
ci/: README.md  vcpkg-dependencies  version
cmake/: Cache.cmake  CompilerWarnings.cmake  PreventInSourceBuilds.cmake  ProjectSemanticVersion.cmake  README.md  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  _--lPROJECT_NAME-Config.cmake.in  compiler_specific_options.cmake  compiler_warnings.cmake  detect_semantic_version.cmake  enable_ccache.cmake  enable_code_coverage.cmake  in_source_builds_not_supported.cmake  must_be_top_level.cmake  sanitizers.cmake  select_ipo.cmake  select_linker.cmake  set_time_trace.cmake  static_analyzers.cmake
docs/: CMakeLists.txt  Doxyfile.in  FUZZING.md  conf.py  example.rst  index.rst  readme.rst
scripts/: README.md  bootstrap-vcpkg.sh  clean-vcpkg-deps.sh  cmake-generate.sh  llvm-cov-report.sh  update-vcpkg.sh
scripts/triplets/: README.md
src/: CMakeLists.txt  README.md  main.cpp
src/include/: version.hpp.in
test/: CMakeLists.txt  README.md  example_tests.cpp  examples_tests.cpp
test/fuzz/: CMakeLists.txt  example_fuzz_test.cpp
